modules/cli/src/test/resources/bad/wfchoice/enabling/threeparty/Test03b.scr
module bad.wfchoice.enabling.threeparty.Test03b;


// Cf. module good.wfchoice.enabling.threeparty.Test03b;
global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			choice at B
			{
				1() from B to C;
				continue X;
			}
			or
			{
				3() from B to C;
				continue X;
			}
			//continue X;
		}
		or
		{
			2() from A to B;
			2() from B to C;
		}
	}
}

